force-app/main/default/objects/VoiceCall/fields/Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>Call_Reason__c</fullName>
    <description>Tracking the reason for why customers call in</description>
    <label>Call Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Have documents been received</fullName>
            </value>
            <value>
                <fullName>Application update</fullName>
            </value>
            <value>
                <fullName>Confirming loan details (vehicle price/deposit)</fullName>
            </value>
            <value>
                <fullName>Insurance queries</fullName>
            </value>
            <value>
                <fullName>Changing loan details</fullName>
            </value>
            <value>
                <fullName>Returning call</fullName>
            </value>
            <value>
                <fullName>Stuck on application / portal</fullName>
            </value>
            <value>
                <fullName>Document upload issues</fullName>
            </value>
            <value>
                <fullName>Dealership - client application</fullName>
            </value>
            <value>
                <fullName>Lender call regarding client application</fullName>
            </value>
            <value>
                <fullName>Marketing / Call Spam</fullName>
            </value>
            <value>
                <fullName>Post settlement queries</fullName>
            </value>
            <value>
                <fullName>Request to withdraw</fullName>
            </value>
            <value>
                <fullName>VISA inquiry</fullName>
            </value>
            <value>
                <fullName>Requesting to speak to credit agent</fullName>
            </value>
            <value>
                <fullName>Requesting to Speak to Settlements agent</fullName>
            </value>
            <value>
                <fullName>Stuck on how to progress</fullName>
            </value>
            <value>
                <fullName>Unsure of how to provide additional documents</fullName>
            </value>
            <value>
                <fullName>Asking for context around documents requested</fullName>
            </value>
            <value>
                <fullName>Start an application</fullName>
            </value>
            <value>
                <fullName>Add information to application</fullName>
            </value>
            <value>
                <fullName>Concern about Lender Switch</fullName>
            </value>
            <value>
                <fullName>Question about credit profile</fullName>
            </value>
            <value>
                <fullName>Question about our loan products</fullName>
            </value>
            <value>
                <fullName>Rate match</fullName>
            </value>
            <value>
                <fullName>Private seller calling regarding client application</fullName>
            </value>
            <value>
                <fullName>Haven&apos;t received email</fullName>
            </value>
            <value>
                <fullName>Finance Policy Questions</fullName>
            </value>
            <value>
                <fullName>General enquiry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>