force-app/main/default/objects/VoiceCall/fields/MyField__c.field-meta.xml
<CustomField>
    <fullName>MyField__c</fullName>
    <label>MyField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>