force-app/main/default/objects/VoiceCall/listViews/All_Open_VoiceMails.listView-meta.xml
<ListView>
    <fullName>All_Open_VoiceMails</fullName>
    <columns>CallStartDateTime</columns>
    <columns>FromPhoneNumber</columns>
    <columns>CallType</columns>
    <columns>CallResolution</columns>
    <columns>RelatedRecord</columns>
    <columns>Owner</columns>
    <columns>Name</columns>
    <columns>EndUser</columns>
    <columns>QualityScore</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CallResolution</field>
        <operation>notEqual</operation>
        <value>Resolved</value>
    </filters>
    <label>All Open Voice Calls</label>
</ListView>