force-app/main/default/objects/VoiceCall/listViews/call_queue_VoiceCall.listView-meta.xml
<ListView>
    <fullName>call_queue_VoiceCall</fullName>
    <filterScope>Queue</filterScope>
    <label>call queue</label>
    <queue>call_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>